--- a/sass_exercise_4-selectors_extend/style.scss
+++ b/sass_exercise_4-selectors_extend/style.scss
@@ -18,7 +18,7 @@
   text-align: center;
 }
 
-.content {
+div {
   display: flex;
   flex-direction: column;
   border: f.rem(1) solid $color-primary;
