--- a/sass_exercise_4-selectors_extend/style.css
+++ b/sass_exercise_4-selectors_extend/style.css
@@ -1,4 +1,4 @@
-.content h2, .content h1 {
+div h2, div h1 {
   align-self: center;
   color: green;
   -webkit-text-decoration: 0.0625rem underline blue;
@@ -9,36 +9,36 @@
   text-align: center;
 }
 
-.content {
+div {
   display: flex;
   flex-direction: column;
   border: 0.0625rem solid red;
   padding: 1.25rem;
 }
-.content h2 {
+div h2 {
   padding: 1rem;
   border: red 0.1875rem solid;
 }
-.content section {
+div section {
   display: flex;
 }
-.content section article {
+div section article {
   flex: 1;
   padding: 0.3125rem;
   color: blue;
   border: 0.0625rem solid green;
   font-size: 1rem;
 }
-.content section article:nth-child(odd) {
+div section article:nth-child(odd) {
   color: blue;
 }
-.content section article:nth-child(even) {
+div section article:nth-child(even) {
   color: red;
 }
-.content section:last-child {
+div section:last-child {
   margin-top: 1.25rem;
 }
-.content section:last-child article {
+div section:last-child article {
   color: green;
   border: 0.0625rem solid blue;
   font-size: 1.5rem;
